Docker local changes

--- a/logstash/log-elasticsearch.conf
+++ b/logstash/log-elasticsearch.conf
@@ -1,10 +1,8 @@
 input {
   kafka{
-        bootstrap_servers=>"b-1.msktest.21l2es.c3.kafka.us-east-2.amazonaws.com:9094,b-2.msktest.21l2es.c3.kafka.us-east-2.amazonaws.com:9094"
-        security_protocol => "SSL"
-        codec => "json"
-        ssl_truststore_location => "/tmp/kafka.client.truststore.jks"
-        topics => ["logstashToKafka"]  
+        bootstrap_servers=>"kafka_local:9092"
+        topics => ["logstashToKafka"]
+        codec => json
         client_id => "inputKafka"  
     }
 }
@@ -12,7 +10,7 @@ input {
 
 output {
     amazon_es { 
-        hosts => ["search-logging-elastic-search-vnltzdacrxhlnpws2uaurqxqqm.us-east-2.es.amazonaws.com"]
+        hosts => ["http://localstack:4578"]
         region => "us-east-2"
         codec => "json"
         ssl => true 
