--- a/logstash/log-maskerservice.conf
+++ b/logstash/log-maskerservice.conf
@@ -1,9 +1,7 @@
 input {
     kafka {
-        bootstrap_servers => "b-1.bulktest.6efh4t.c3.kafka.us-east-2.amazonaws.com:9094,b-2.bulktest.6efh4t.c3.kafka.us-east-2.amazonaws.com:9094"
+        bootstrap_servers => "kafka_local:9092"
         topics => ["filebeatToKafka"]
-        security_protocol => "SSL"
-        ssl_truststore_location => "/tmp/kafka.client.truststore.jks"
         group_id => "maskerservice"
     }
 }
@@ -18,11 +16,9 @@ filter {
 
 output {
     kafka {
-	    bootstrap_servers => "b-1.bulktest.6efh4t.c3.kafka.us-east-2.amazonaws.com:9094,b-2.bulktest.6efh4t.c3.kafka.us-east-2.amazonaws.com:9094"
+	    bootstrap_servers => "kafka_local:9092"
         topic_id => "logstashToKafka"
-	    security_protocol => "SSL"
 	    codec => line { format => "%{message}" }
-        ssl_truststore_location => "/tmp/kafka.client.truststore.jks"
 	    client_id => "outputKafka"
     }
 
