--- a/logstash/log-s3.conf
+++ b/logstash/log-s3.conf
@@ -1,9 +1,8 @@
 input {
   kafka{
-        bootstrap_servers=>"b-1.msktest.21l2es.c3.kafka.us-east-2.amazonaws.com:9094,b-2.msktest.21l2es.c3.kafka.us-east-2.amazonaws.com:9094"
-        security_protocol => "SSL"
-        ssl_truststore_location => "/tmp/kafka.client.truststore.jks"
-        topics=>["logstashToKafka"]
+        bootstrap_servers=>"kafka_local:9092"
+        topics => ["logstashToKafka"]
+        codec => json
         group_id=>"S3_Service"   
     }
 }
@@ -11,6 +10,8 @@ input {
 
 output {
     s3{
+        access_key_id => ""
+        secret_access_key => ""
         prefix => "%{+YYYY}/%{+MM}/%{+dd}"
         size_file => 1000
         time_file => 1
