Updated dockerfile for Kafka

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
     networks:
       - elk
   kafka_local:
-    image: kafka_local
+    build: 
+      context: ./logging-poc/kafka
     container_name: kafka_local
     ports:
       - "9092:9092"
