--- a/logstash/log-elasticsearch.conf
+++ b/logstash/log-elasticsearch.conf
@@ -1,7 +1,7 @@
 input {
   kafka{
-        bootstrap_servers=>"kafka_local:9092"
-        topics => ["logstashToKafka"]
+        bootstrap_servers=>"kafka_cluster:9092"
+        topics => ["masked-topic"]
         codec => json
         client_id => "inputKafka"  
     }
@@ -9,10 +9,8 @@ input {
 
 
 output {
-    amazon_es { 
-        hosts => ["http://localstack:4578"]
-        region => "us-east-2"
-        codec => "json"
-        ssl => true 
+    elasticsearch { 
+        hosts => ["http://es01:9200"]
+        index => "test-logs"
     }
 }
