--- a/logstash/log-maskerservice.conf
+++ b/logstash/log-maskerservice.conf
@@ -1,7 +1,7 @@
 input {
     kafka {
-        bootstrap_servers => "kafka_local:9092"
-        topics => ["filebeatToKafka"]
+        bootstrap_servers => "kafka_cluster:9092"
+        topics => ["unmasked-topic"]
         group_id => "maskerservice"
     }
 }
@@ -16,8 +16,8 @@ filter {
 
 output {
     kafka {
-	    bootstrap_servers => "kafka_local:9092"
-        topic_id => "logstashToKafka"
+	    bootstrap_servers => "kafka_cluster:9092"
+        topic_id => "masked-topic"
 	    codec => line { format => "%{message}" }
 	    client_id => "outputKafka"
     }
