--- a/config_files/logstash-es-sync.conf
+++ b/config_files/logstash-es-sync.conf
@@ -12,7 +12,7 @@ input {
 
 filter {
         mutate{
-          rename => { "@timestamp" => "masker_timestamp" }
+          remove_field => ["@timestamp"]
         }
         json {
         source => "message"
@@ -22,7 +22,6 @@ filter {
         source => "message"
         remove_field => ["host","context","agent","message","ecs","log"]
         }
-        ruby { code => "event.set('es_sync_timestamp', Time.now());" }
         mutate {
             replace => { "timestamp" => "%{@timestamp}" }
         }
