--- a/logstash/log-maskerservice.conf
+++ b/logstash/log-maskerservice.conf
@@ -3,14 +3,16 @@ input {
         bootstrap_servers => "kafka_cluster:9092"
         topics => ["unmasked-topic"]
         group_id => "maskerservice"
+        codec => json
     }
 }
 
 filter {
     mutate {
         gsub => [
-            "message", "([a-zA-Z0-9_.+-]{1,4})[a-zA-Z0-9_.+-]*@([a-zA-Z0-9-]+)\.[a-zA-Z0-9-.]*([a-zA-Z0-9-.]{3})|(live|test)_(__dev__)?[a-zA-Z0-9]*([a-zA-Z0-9-.]{3})|\(?([+][0-9]{1,2})?\)?(\(?\d{3}\)?)[\s.-]?\d{3}[\s.-]?\d{4}", "\1\4\8xxxxxx\3\6"
+            "logMessage", "([a-zA-Z0-9_.+-]{1,4})[a-zA-Z0-9_.+-]*@([a-zA-Z0-9-]+)\.[a-zA-Z0-9-.]*([a-zA-Z0-9-.]{3})|(live|test)_(__dev__)?[a-zA-Z0-9]*([a-zA-Z0-9-.]{3})|\(?([+][0-9]{1,2})?\)?(\(?\d{3}\)?)[\s.-]?\d{3}[\s.-]?\d{4}", "\1\4\8xxxxxx\3\6"
         ]
+        remove_field => ["agent","host", "ecs", "log", "@version"]
     }
 }
 
@@ -18,8 +20,9 @@ output {
     kafka {
 	    bootstrap_servers => "kafka_cluster:9092"
         topic_id => "masked-topic"
-	    codec => line { format => "%{message}" }
+        codec => json
 	    client_id => "outputKafka"
     }
+    # stdout {}
 
 }
