--- a/logstash/log-elasticsearch.conf
+++ b/logstash/log-elasticsearch.conf
@@ -9,8 +9,9 @@ input {
 
 
 output {
-    elasticsearch { 
-        hosts => ["http://es01:9200"]
-        index => "test-logs"
-    }
+    # elasticsearch { 
+    #     hosts => ["http://es01:9200"]
+    #     index => "test-logs"
+    # }
+    stdout {}
 }
