--- a/config_files/logstash-es-sync.conf
+++ b/config_files/logstash-es-sync.conf
@@ -1,11 +1,12 @@
 input {
   kafka{
-    bootstrap_servers => "${INPUT_BROKERS}"
+    bootstrap_servers => "${ES_SYNC_INPUT_BROKERS}"
     security_protocol => "SSL"
     ssl_truststore_location => "/home/ubuntu/kafka.client.truststore.jks"
-    topics => ["${TOPIC_ID}"]
-    group_id => "${CONSUMER_GROUP_ID}"
-    consumer_threads => "${CONSUMER_THREADS}"
+    topics => ["${ES_SYNC_INPUT_TOPIC}"]
+    group_id => "${ES_SYNC_CONSUMER_GROUP_ID}"
+    consumer_threads => "${ES_SYNC_CONSUMER_THREADS}"
+    codec => json
     auto_offset_reset => "earliest"
   }
 }
@@ -28,7 +29,7 @@ filter {
 }
 output {
   amazon_es {
-    hosts => ["${ES_DOMAIN}"]
+    hosts => ["${ES_DOMAIN_NAME}"]
     region => "us-east-2"
     codec => "json"
     index => "${ES_INDEX}"
