--- a/config_files/logstash-masker.conf
+++ b/config_files/logstash-masker.conf
@@ -1,11 +1,12 @@
 input {
     kafka {
-        bootstrap_servers => "${INPUT_BROKERS}"
-    topics => ["${INPUT_TOPIC}"]
+        bootstrap_servers => "${MASKER_INPUT_BROKERS}"
+    topics => ["${MASKER_INPUT_TOPIC}"]
     security_protocol => "SSL"
+    codec => json
     ssl_truststore_location => "/home/ubuntu/kafka.client.truststore.jks"
-    group_id => "${CONSUMER_GROUP_ID}"
-        consumer_threads => "${CONSUMER_THREADS}"
+    group_id => "${MASKER_CONSUMER_GROUP_ID}"
+        consumer_threads => "${MASKER_CONSUMER_THREADS}"
     auto_offset_reset => "earliest"
   }
 }
@@ -13,18 +14,18 @@ input {
 filter {
     mutate {
         gsub => [
-            "[message][message]", "([a-zA-Z0-9_.+-]{1,4})[a-zA-Z0-9_.+-]*@([a-zA-Z0-9-]+)\.[a-zA-Z0-9-.]*([a-zA-Z0-9-.]{3})|(live|test)_(__dev__)?[a-zA-Z0-9]*([a-zA-Z0-9-.]{3})|\(?([+][0-9]{1,2})?\)?(\(?\d{3}\)?)[\s.-]?\d{3}[\s.-]?\d{4}", "\1\4\8xxxxxx\3\6"
+            "logMessage", "([a-zA-Z0-9_.+-]{1,4})[a-zA-Z0-9_.+-]*@([a-zA-Z0-9-]+)\.[a-zA-Z0-9-.]*([a-zA-Z0-9-.]{3})|(live|test)_(__dev__)?[a-zA-Z0-9]*([a-zA-Z0-9-.]{3})|\(?([+][0-9]{1,2})?\)?(\(?\d{3}\)?)[\s.-]?\d{3}[\s.-]?\d{4}", "\1\4\8xxxxxx\3\6"
         ]
     }
 }
 output {
     kafka {
-    bootstrap_servers => "${OUTPUT_BROKERS}"
-        topic_id => "${OUTPUT_TOPIC}"
+    bootstrap_servers => "${MASKER_OUTPUT_BROKERS}"
+        topic_id => "${MASKER_OUTPUT_TOPIC}"
     security_protocol => "SSL"
-    codec => line { format => "%{message}" }
-        ssl_truststore_location => "/home/ubuntu/kafka.client.truststore.jks"
-    client_id => "outputKafka"
+    codec => json
+    ssl_truststore_location => "/home/ubuntu/kafka.client.truststore.jks"
+    client_id => "maskerOutputKafka"
     compression_type => "snappy"
         linger_ms => 5
         acks => "1"
