--- a/config_files/pipelines.yml
+++ b/config_files/pipelines.yml
@@ -8,3 +8,8 @@
   pipeline.workers: 2
   pipeline.batch.size: 5000
   xpack.monitoring.enabled: false
+- pipeline.id: s3-pipeline
+  path.config: "/etc/logstash/conf.d/logstash-s3.conf"
+  pipeline.workers: 2
+  pipeline.batch.size: 5000
+  xpack.monitoring.enabled: false
