--- a/cfm_templates/cfm2.yml
+++ b/cfm_templates/cfm2.yml
@@ -334,6 +334,82 @@ MSKIdleCPUAlarmsBroker3:
           - 2
           - !Ref MSKBrokerIDList
 
+MSKMemoryFreeAlarmsBroker1:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+        AlarmDescription: High Disk Usage for storing Data
+        AlarmName:
+            Fn::Sub:
+                - cb-${Environment}-${RegionId}-${Microservice}-msk-free-memory-alarm-1
+                - { RegionId: !FindInMap [CommonServiceMeta, !Ref "AWS::Region", name]}
+        AlarmActions:
+        - Ref: SnsTopicArn
+        MetricName: MemoryFree
+        Namespace: AWS/Kafka
+        Statistic: Average
+        Period: 300
+        EvaluationPeriods: 3
+        Threshold: 2000000000
+        ComparisonOperator: LessThanOrEqualToThreshold
+        Dimensions:
+        - Name: "Cluster Name"
+          Value: !Ref MSKClusterName
+        - Name: "Broker ID"
+          Value: !Select 
+          - 0
+          - !Ref MSKBrokerIDList
+
+MSKMemoryFreeAlarmsBroker2:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+        AlarmDescription: High Disk Usage for storing Data
+        AlarmName:
+            Fn::Sub:
+                - cb-${Environment}-${RegionId}-${Microservice}-msk-free-memory-alarm-2
+                - { RegionId: !FindInMap [CommonServiceMeta, !Ref "AWS::Region", name]}
+        AlarmActions:
+        - Ref: SnsTopicArn
+        MetricName: MemoryFree
+        Namespace: AWS/Kafka
+        Statistic: Average
+        Period: 300
+        EvaluationPeriods: 3
+        Threshold: 2000000000
+        ComparisonOperator: LessThanOrEqualToThreshold
+        Dimensions:
+        - Name: "Cluster Name"
+          Value: !Ref MSKClusterName
+        - Name: "Broker ID"
+          Value: !Select 
+          - 1
+          - !Ref MSKBrokerIDList
+    
+  MSKMemoryFreeAlarmsBroker3:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+        AlarmDescription: High Disk Usage for storing Data
+        AlarmName:
+            Fn::Sub:
+                - cb-${Environment}-${RegionId}-${Microservice}-msk-free-memory-alarm-3
+                - { RegionId: !FindInMap [CommonServiceMeta, !Ref "AWS::Region", name]}
+        AlarmActions:
+        - Ref: SnsTopicArn
+        MetricName: MemoryFree
+        Namespace: AWS/Kafka
+        Statistic: Average
+        Period: 300
+        EvaluationPeriods: 3
+        Threshold: 2000000000
+        ComparisonOperator: LessThanOrEqualToThreshold
+        Dimensions:
+        - Name: "Cluster Name"
+          Value: !Ref MSKClusterName
+        - Name: "Broker ID"
+          Value: !Select 
+          - 2
+          - !Ref MSKBrokerIDList
+          
+
 
 
 #Elasticsearch Alarms
